--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'application'
 }
 application {
-    mainClassName='Main'
+    mainClassName='SimpleUI'
 }
 group 'org.example'
 version '1.0-SNAPSHOT'
